calender and fixed code - stable version